--- a/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/customer-details.component.html
@@ -1062,7 +1062,7 @@
 
                     </dx-data-grid>
                   </div>
-                  <button type="submit" class="btn btn-primary buttoncolor " style="margin-top:1%;margin-left:1%;height:40px;width:200px;">Delete Tier Range</button>
+                  <button type="submit" class="btn btn-primary buttoncolor " style="margin-top:1%;margin-left:1%;height:40px;width:200px;"(click)="deletetierrange()">Delete Tier Range</button>
                   <div class="table-wrapper-scroll-y my-custom-scrollbar" style="margin-left:1%;margin-top:1%; ">
 
                     <dx-data-grid id="gridContainer " style="width: 100%; height: 12rem;font-family:Verdana;font-style:normal;background-color:white"
