--- a/ClientApp/src/app/formula-lookup/customer-details/sales-rep-name/sales-rep-name.component.html
+++ b/ClientApp/src/app/formula-lookup/customer-details/sales-rep-name/sales-rep-name.component.html
@@ -130,7 +130,7 @@
     <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="SalesPersondelete();ClearData();">Delete</button>
     <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="ClearData();">New</button>
     <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%" (click)="SalesPersonsaveupdate(fstname.value,CNnum.value,
-Rgn.value,lstnam.value,mail.value,initial.value);">
+Rgn.value,lstnam.value,mail.value,initial.value);ClearData();">
       Save/Update
     </button>
     <button type="submit" class="btn btn-primary buttoncolor" style="float:right;margin-right:10px;height:50px;margin-top:1%;" matDialogClose>Back</button>
