--- a/ClientApp/src/app/pdr-management/new-chemistry-params/add-chemistry/add-chemistry.component.html
+++ b/ClientApp/src/app/pdr-management/new-chemistry-params/add-chemistry/add-chemistry.component.html
@@ -6,9 +6,9 @@
     <div class="form-row">
       <div class="form-inline">
         <label style="margin-left:10px;">Claim</label>
-        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="clmdetail" name="clmdata" #clm>
+        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="clmdetail" name="clmdata" #clm  [(ngModel)]="Claim">
         <label style="margin-left:10px;">Method</label>
-        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="mtddetail" name="mthddata" #mtd>
+        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="mtddetail" name="mthddata" #mtd [(ngModel)]="Method">
       </div>
 
     </div>
