--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -719,7 +719,7 @@
                   <th scope="row">2</th>
                   <td style="color:red;">PDR Approval</td>
                   <td>
-                    <input [min]="pdrapproval" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -727,7 +727,7 @@
   " [(ngModel)]="pdrapproval" value="" id="pdrappr" name="pdrappro" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="pdrapproval" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -765,7 +765,7 @@
                   <td style="color:black; background-color:#d8e7eb">Formula Creation</td>
                   <td style="background-color:#d8e7eb">
 
-                    <input [min]="formulacreation" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -774,7 +774,7 @@
                   </td>
 
                   <td style="background-color: #d8e7eb;">
-                    <input [min]="formulacreationend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -810,7 +810,7 @@
                   <th scope="row">4</th>
                   <td>QC Tests Approvals </td>
                   <td>
-                    <input [min]="qctestapprovals" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -818,7 +818,7 @@
                  " [(ngModel)]="qctestapprovals" value="" id="qcappstarta" name="qcapprstartaa" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="qctestapprovalsend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -854,7 +854,7 @@
                   <th scope="row">5</th>
                   <td>Product Test Approvals</td>
                   <td>
-                    <input [min]="producttestapprovals" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -862,7 +862,7 @@
                  " [(ngModel)]="producttestapprovals" value="" id="prodtestappro" name="prodtestappr" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="protestapprend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -897,7 +897,7 @@
                   <th scope="row">6</th>
                   <td>Stability Test Approvals</td>
                   <td>
-                    <input [min]="stabilitytestapproval" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -905,7 +905,7 @@
                  " [(ngModel)]="stabilitytestapproval" value="" id="stabilitytestapprovalaa" name="stabilitytestapprovala" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="stabilityapprovalend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -940,7 +940,7 @@
                   <th scope="row">7</th>
                   <td>COA Test Approvals</td>
                   <td>
-                    <input [min]="coateatappro" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -948,7 +948,7 @@
                  " [(ngModel)]="coateatappro" value="" id="coateatapproaa" name="coateatapproa" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="coatestapproend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -983,7 +983,7 @@
                   <th scope="row">8</th>
                   <td style="color:red;">Regulatory Approvals/Rejection</td>
                   <td>
-                    <input [min]="regulatoryappro" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     box-shadow: none;
     outline: none;
@@ -991,7 +991,7 @@
   " [(ngModel)]="regulatoryappro" value="" id="regulatoryapproaa" name="regulatoryapproa" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="regulatoryapproend" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -1027,7 +1027,7 @@
                   <th scope="row">9</th>
                   <td>IL(Label) Approval</td>
                   <td>
-                    <input [min]="ilapprappr" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1035,7 +1035,7 @@
                  " [(ngModel)]="ilapprappr" value="" id="ilapprappraa" name="ilapprappra" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="ilapprapprend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1071,7 +1071,7 @@
                   <th scope="row">10</th>
                   <td>Formula Procedure Approval</td>
                   <td>
-                    <input [min]="formprocedureappr" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1079,7 +1079,7 @@
                  " [(ngModel)]="formprocedureappr" value="" id="formprocedureappraa" name="formprocedureappra" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="formprocedureapprend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1114,7 +1114,7 @@
                   <th scope="row">11</th>
                   <td style="color:red;">Formula Approval/Rejection</td>
                   <td>
-                    <input [min]="formulaapprorejection" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -1122,7 +1122,7 @@
   " [(ngModel)]="formulaapprorejection" value="" id="formulaapprorejectionaa" name="formulaapprorejectiona" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="formulaapprorejectionend" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -1158,7 +1158,7 @@
                   <td style="color:black;background-color:#d8e7eb">Sample Creation</td>
                   <td style="background-color:#d8e7eb">
 
-                    <input [min]="samplecreation" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -1167,7 +1167,7 @@
                   </td>
 
                   <td style="background-color: #d8e7eb;">
-                    <input [min]="samplecreationend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -1202,7 +1202,7 @@
                   <th scope="row">13</th>
                   <td style="color:red;">Sample Approval/Rejection </td>
                   <td>
-                    <input [min]="sampleapproval" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -1210,7 +1210,7 @@
   " [(ngModel)]="sampleapproval" value="" id="sampleapprovalaa" name="sampleapprovala" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="sampleapproval" type="date" style="    width: 100%;
+                    <input  type="date" style="    width: 100%;
     border: none;
     color: red;
     box-shadow: none;
@@ -1246,7 +1246,7 @@
                   <td style="color:black;background-color:#d8e7eb">Productization (to scale up&manufacture) </td>
                   <td style="background-color:#d8e7eb">
 
-                    <input [min]="productization" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -1255,7 +1255,7 @@
                   </td>
 
                   <td style="background-color: #d8e7eb;">
-                    <input [min]="productizationend" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
                   background-color: #d8e7eb;
                   box-shadow: none;
@@ -1290,7 +1290,7 @@
                   <th scope="row">15</th>
                   <td>PCC Approval </td>
                   <td>
-                    <input [min]="pccapprovaldata" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1298,7 +1298,7 @@
                  " [(ngModel)]="pccapprovaldata" value="" id="pccapprovaldataaa" name="pccapprovaldataa" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="pccapprovalenddata" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1333,7 +1333,7 @@
                   <th scope="row">16</th>
                   <td>PIF Approval </td>
                   <td>
-                    <input [min]="pifapprovaldata" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1342,7 +1342,7 @@
                   </td>
 
                   <td>
-                    <input [min]="pifapprovalenddata" type="date" style=" width:100%;
+                    <input  type="date" style=" width:100%;
                   border: none;
 
                   box-shadow: none;
@@ -1377,7 +1377,7 @@
                   <th scope="row">17</th>
                   <td style="color:red;">Product Approval </td>
                   <td>
-                    <input [min]="pdapproval" type="date" style=" width:100%;color:red;
+                    <input  type="date" style=" width:100%;color:red;
                   border: none;
 
                   box-shadow: none;
@@ -1385,7 +1385,7 @@
                  " [(ngModel)]="pdapproval" value="" id="pdapprovalaa" name="pdapprovala" placeholder="Enter PDR date" />
                   </td>
                   <td>
-                    <input [min]="pdapprovalend" type="date" style=" width:100%;color:red;
+                    <input  type="date" style=" width:100%;color:red;
                   border: none;
 
                   box-shadow: none;
