--- a/ClientApp/src/app/pdr-management/new-microbiology-params/add-microbiology/add-microbiology.component.html
+++ b/ClientApp/src/app/pdr-management/new-microbiology-params/add-microbiology/add-microbiology.component.html
@@ -6,7 +6,7 @@
     <div class="form-row">
       <div class="form-inline">
         <label style="margin-left:10px;">Test</label>
-        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="tstName" name="tstdata" #tst>
+        <input type="text" class="form-control" size="12" style="margin-left:10px;" id="tstName" name="tstdata" #tst  [(ngModel)] = "Claim">
       </div>
       <div class="form-inline">
         <label style="margin-left:10px;">Method</label>
