--- a/ClientApp/src/app/pdr-management/pdr-management.component.html
+++ b/ClientApp/src/app/pdr-management/pdr-management.component.html
@@ -1658,7 +1658,7 @@
 
               </thead>
               <tbody>
-                <tr *ngFor="let Audit_Details of loadformulationsassign2" (click)="setvaluesform(Audit_Details);" #conten>
+                <tr *ngFor="let Audit_Details of loadformulationsassign2" (click)="setvalueschangerequest(Audit_Details);" #conten>
                   <td class="tabledatasize">{{ Audit_Details.FormulaCode }}</td>
                   <td class="tabledatasize">{{ Audit_Details.FormulaName}}</td>
                   <td class="tabledatasize">{{ Audit_Details.LabRefNo}}</td>
