--- a/ClientApp/src/app/formula-lookup/formula-status/formula-status.component.css
+++ b/ClientApp/src/app/formula-lookup/formula-status/formula-status.component.css
@@ -1,13 +1,58 @@
-fieldset.scheduler-border {
-  border: solid 1px #DDD !important;
-  padding: 0 10px 10px 10px;
-  border-bottom: none;
+@import 'ag-grid-community/dist/styles/ag-grid.css';
+@import 'ag-grid-community/dist/styles/ag-theme-balham.css';
+@import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
+
+
+.sick-days-warning {
+  background-color: sandybrown !important;
 }
 
-legend.scheduler-border {
-  width: auto !important;
-  border: none;
-  font-size: 14px;
+.ag-header-cell-label {
+  text-align: center
+}
+
+.sick-days-breach {
+  background-color: lightcoral !important;
+}
+
+.cell-highlighted {
+  background-color: #e6e6e6;
+}
+
+/deep/.myColor {
+  background-color: green !important;
+}
+
+.cell-highlighted {
+  color: gray;
+  font-style: italic;
+}
+
+.vl {
+  float: left;
+  margin-left: 10%;
+  border-right: 2px solid black;
+  height: 40px;
+}
+
+.alert {
+  position: fixed;
+  top: 5%;
+  right: 3rem;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 0.25rem;
+  padding: 2rem;
+  background: #fff;
+  color: #49784d;
+  box-shadow: 0 5px 10px -5px rgba(0, 0, 0, 0.5);
+  transition: all 0.2s ease-in-out;
+  opacity: 0;
+}
+
+.visible {
+  opacity: 1;
+  transform: translateY(1.25rem);
 }
 
 p.test {
@@ -28,9 +73,13 @@ input {
   margin: 5px;
 }
 
+.table-header {
+  text-align: center
+}
+
 fieldset.scheduler-border {
   border: solid 1px #DDD !important;
-  padding: 0 10px 10px 10px;
+  padding: 0 5px 5px 5px;
   border-bottom: none;
 }
 
@@ -72,12 +121,7 @@ h2.design {
   background: #ECECEC;
   display: inline-block;
 }
-label {
-  text-align: right;
-  padding-right: 20px;
-  display: inline-block;
-  min-width: 150px;
-}
+
 
 .buttoncolor {
   border-color: #214252;
@@ -97,4 +141,142 @@ label {
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
+}
+
+p.test {
+  padding: 20px;
+  text-align: left;
+  font-family: Haettenschweiler
+}
+
+.margindesign {
+  border: 0.5px solid maroon;
+  padding: 50px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  margin: 20px;
+}
+
+input {
+  margin: 5px;
+}
+
+fieldset.scheduler-border {
+  border: solid 1px #DDD !important;
+  padding: 0 5px 5px 5px;
+  border-bottom: none;
+}
+
+legend.scheduler-border {
+  width: auto !important;
+  border: none;
+  font-size: 14px;
+}
+
+h2.design {
+  text-align: center;
+  font: 20px;
+  font-family: 'Arial Rounded MT';
+  padding-top: 40px;
+  padding-bottom: 30px;
+}
+
+.textalign1 {
+}
+
+.mat-tab-group {
+  margin-bottom: 48px;
+}
+
+.tabcolor {
+  color: #bb2205;
+}
+
+.tabbutto:hover {
+  background-color: whitesmoke;
+  color: dimgrey;
+}
+
+.tabrowli {
+  text-align: center;
+  margin: 2px;
+  padding: 10px;
+  border: 1px solid #AAA;
+  background: #ECECEC;
+  display: inline-block;
+}
+
+
+.buttoncolor {
+  border-color: #214252;
+  background-color: #214252;
+}
+
+.tab-close {
+  color: lightseagreen;
+  text-align: right;
+  cursor: pointer;
+}
+
+.button {
+  border: none;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.label1 {
+  text-align: right;
+  padding-right: 15px;
+  display: inline-block;
+  min-width: 155px;
+  font-size: medium;
+  font-family: Verdana;
+}
+
+.label2 {
+  text-align: right;
+  padding-right: 15px;
+  display: inline-block;
+  min-width: 350px;
+  font-size: medium;
+  font-family: Verdana;
+}
+
+.form-check-input {
+  width: 20px;
+  height: 20px;
+}
+
+.workflow {
+  font-size: larger;
+  color: maroon
+}
+
+.tabledatasize {
+  font-size: larger;
+}
+
+.textsize {
+  font-size: 15px;
+  font-family: Verdana;
+}
+
+.horizontal {
+  display: inline-block;
+  width: 100px;
+}
+
+.cell-fail {
+  text-align: center;
+  font-weight: bold;
+  background-color: #f44336;
+}
+
+.cell-pass {
+  text-align: center;
+  font-weight: bold;
+  background-color: #4caf50;
 }
