--- a/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -82,11 +82,11 @@
           <h4 style="color:black;">{{userna}}</h4>
 
         </mat-toolbar-row>
-        <mat-toolbar-row >
-          <div  style="margin-left:90%;margin-bottom:15px">
-            <label style="color:black; ">{{company}}</label>
+        <mat-toolbar-row style="margin-top:-12px" >
+          <div  style="margin-left:94.4%;margin-bottom:15px">
+            <label style="color:black;font-size:medium">{{company}}</label>
           </div>
-        </mat-toolbar-row>
+        </mat-toolbar-row >
         <style>
           .icon {
             font-size: 27px;
