--- a/ClientApp/src/app/formula-lookup/addphystability-test/addphystability-test.component.css
+++ b/ClientApp/src/app/formula-lookup/addphystability-test/addphystability-test.component.css
@@ -1,3 +1,8 @@
+@import 'ag-grid-community/dist/styles/ag-grid.css';
+@import 'ag-grid-community/dist/styles/ag-theme-balham.css';
+@import "ag-grid-community/dist/styles/ag-grid.css";
+@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
+
 p.test {
   padding: 20px;
   text-align: left;
@@ -169,4 +174,21 @@ h2.design {
 label {
   display: inline-block;
   text-align: right;
+}
+
+.label1 {
+  text-align: right;
+  padding-right: 15px;
+  display: inline-block;
+  min-width: 150px;
+}
+
+.form-check-input {
+  width: 20px;
+  height: 20px;
+}
+
+.workflow {
+  font-size: larger;
+  color: maroon
 }
